# Proyecto-cyber

./: .gitignore  README.md  main.py  pyproject.toml
attacks/: brute_force.py  dictionary.py
password_cracker/: cli.py
password_cracker/attacks/: brute_force.py  dictionary.py
password_cracker/utils/: charset.py  hashing.py  mask.py
tests/: test_bruteforce.py  test_dictionary.py  test_hashing.py
utils/: charset.py  hashing.py
wordlists/: dictionary.txt
